--- a/SampleForDeployService.yaml
+++ b/SampleForDeployService.yaml
@@ -24,10 +24,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dockersampleconfig
+  name: samplefordeployservice
 spec:
   type: LoadBalancer
   ports:
   - port: 80
   selector:
-    app: Dockersampleconfig
+    app: SampleForDeployService
